--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,22 @@
 <!doctype html>
 <html>
     <head>
+        <!-- Bootstrap CSS CDN -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        
+        <!-- My CSS (global) -->
+        <link rel="stylesheet" href="/static/base.css">
+
         {% block head %}
         {% endblock %}
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
-        {% block body %}
-        {% endblock %}
+        <div id="base_container">
+            <div class="col-lg justify-content-center">
+                {% block body %}
+                {% endblock %}
+            </div>
+        </div>
     </body>
 </html>
