Add to index page and create faq list.

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@ Are You Manic Right Now?
 
 <h1>Yes</h1>
 <h3>(probably)</h3>
-<p>With absolutely no data to back me up, I reckon purely the fact that you're here probably means your risk of having mania just jumpped like 20 points. And you know I'm right, right?</p>
+<p>I'm gonna level wth you. You're on this page. So you probably are. You know that right? Why else would you be here?</p>
 <br>
 <br>
 <br>
@@ -82,39 +82,6 @@ Are You Manic Right Now?
         {% endfor %}
     </div> 
 
-
-    <div class="container">
-        <p>2. I need less sleep than usual.</p>
-        <div class="row justify-content-center">
-            <div class="col-md-auto">
-                <label for="q2_0">Not at all</label><br>
-                <input type="radio" id="q2_0" name="q2" value="0">
-            </div>
-            <div class="col-md-auto">
-                <label for="q2_1">Just a little</label><br>
-                <input type="radio" id="q2_1" name="q2" value="1">
-            </div>
-            <div class="col-md-auto">
-                <label for="q2_2">Somewhat</label><br>
-                <input type="radio" id="q2_2" name="q2" value="2">
-            </div>
-            <div class="col-md-auto">
-                <label for="q2_3">Moderately</label><br>
-                <input type="radio" id="q2_3" name="q2" value="3">
-            </div>
-            <div class="col-md-auto">
-                <label for="q2_4">Quite a lot</label><br>
-                <input type="radio" id="q2_4" name="q2" value="4">
-            </div>
-            <div class="col-md-auto">
-                <label for="q2_5">Very much</label><br>
-                <input type="radio" id="q2_5" name="q2" value="5">
-            </div>
-        </div>
-        <br>
-        <br>
-        <br>
-    </div> 
 
 </div>
 
